# libYafaRay-Gui

./: AUTHORS.md  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSES  README.md
cmake/: CMakeLists.txt
cmake/generated_input/: CMakeLists.txt  yafaray_gui_qt_version_build_info.h.in  yafaray_gui_version_build_info.h.in
cmake/modules/: message_boolean.cmake
include/common/: image.h  images_collection.h  log.h  output.h  version_build_info.h  yafaray_gui_common.h  yafaray_gui_qt_common.h
include/gui/: animworking.h  events.h  image.h  images_collection.h  interface_qt.h  main_window.h  mywindow.h  output.h  qt_main_window.h  qtoutput.h  qtprogress.h  renderwidget.h  ui.h  worker.h
include/gui_qt/: animworking.h  events.h  main_window.h  renderwidget.h  worker.h
include/gui_wx/: main_window.h
include/public_api/: yafaray_gui_c_api.h  yafaray_gui_c_api_symbols.map  yafaray_gui_qt_c_api.h  yafaray_gui_qt_c_api_symbols.map
include/resource/: guifont.h  yafarayicon.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  images_collection.cc  log.cc  output.cc  version_build_info.cc
src/gui/: CMakeLists.txt  animworking.cc  events.cc  images_collection.cc  main_window.cc  mywindow.cc  output.cc  qt_main_window.cc  qtoutput.cc  qtprogress.cc  renderwidget.cc  ui.cc  windowbase.ui  worker.cc
src/gui_qt/: CMakeLists.txt  animworking.cc  events.cc  main_window.cc  renderwidget.cc  worker.cc
src/gui_wx/: CMakeLists.txt  main_window.cc
src/public_api/: CMakeLists.txt  yafaray_gui_c_api.cc  yafaray_gui_qt_c_api.cc
tests/: CMakeLists.txt
tests/test01/: CMakeLists.txt  test01_gui_qt.cc
